# DocChat

./: .dockerignore  .env.example  .env.local  .env.production  .gitignore  API_MANUAL.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE_NOTES.md  deploy-production.sh  deploy-with-nginx.sh  deployment-test-report.md  docker-compose.yml  docker-run.sh  docker-stop.sh  nginx-local.conf  pyproject.toml  requirements.txt  test-deployment.sh
.streamlit/: secrets.toml.example
app/: __init__.py  agent.py  auth.py  config.py  database.py  main.py  memory.py  retriever.py  tools.py  workflow.py
app/core/: config.py
frontend/: streamlit_app.py
nginx/: nginx.conf
nginx/conf.d/: docchat-dev.conf  docchat.conf
scripts/: README_FIXES.md  USAGE_GUIDE.md  clean_for_release.sh  fix_issues.sh  restart.sh  setup.sh  start.sh  status.sh  stop.sh
